# nu_nixua_sebe_bot

./: .gitignore  README.md  pyproject.toml
src/bot/: __main__.py  config.py  database.py
src/bot/callback/: __init__.py  clan_request.py
src/bot/exceptions/: __init__.py  user.py
src/bot/filters/: __init__.py  clan.py  owner.py  text.py  user.py
src/bot/middlewares/: __init__.py  database_middleware.py
src/bot/models/: base.py  user.py
src/bot/repositories/: __init__.py  base.py  user.py
src/bot/routers/: __init__.py  routes.py
src/bot/routers/clan/: register.py  show.py
src/bot/routers/common/: bot.py  error.py  start.py
src/bot/routers/owner/: request_join.py
src/bot/services/: __init__.py  base.py  user.py
src/bot/storage/: clan_requests.py
src/bot/types/: __init__.py
src/bot/types/dto/: user.py
